# fta-agent

./: .env.example  .gitignore  NEXT-STEPS.md  README.md  claude.md  pyproject.toml
docs/: NEXT-STEPS.md
docs/agents/: _template.md  consulting-agent.md  functional-consultant.md  gl-design-coach.md
docs/content/: fta-capabilities-showcase.md  fta-slide-deck-content.md  insurance-coa-dimensions.md  insurance-reporting-inventory.md  pursuit-messaging.md
docs/decisions/: decision-log.md
docs/design/: agent-architecture.md  business-process-design-workstream.md  mvp-agent-design.md  process-visualization.md
docs/engagement-flow/: day-in-the-life.md
docs/features/: configuration-agent.md  engagement-context.md  erp-platform-strategy.md  shared-backlog.md
docs/operations/: cost-model.md
docs/plans/: current-state-extraction-plan.md  master-plan.md  pdd-003-coa-design.md  pdd-004-account-mapping.md  pdd-005-dimension-design.md  pdd-008-color-readability-overhaul.md  scoping-canvas-design.md  stream-b-agentic-functional-consultant.md  v1-build-plan.md
docs/reference/: agent-backlog.md  feature-specs.md
docs/research/: insurance-process-inventory-research-prompt.md  insurance-process-inventory-v1.md
docs/sessions/: 2026-02-14-session-001-ideation-kickoff.md  2026-02-15-session-003-tech-stack.md  (+24 more)
scripts/: gen-requirements.ts  gen_requirements.py  seed_outcomes.py
tests/: conftest.py  test_agents.py  test_data_engine.py  test_eval.py  test_health.py  test_outcomes.py  test_stream_b.py  test_synthetic_data.py
web/: README.md  package.json  pnpm-lock.yaml
(+164 files in other folders)
